--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ text {
 /*custome style on navbar brand */
 
 .navbar .navbar-brand {
-  color: #fff;
+  color:#fcf8e3;
   position: absolute;
   left: 40px;
   margin: 5px 5px!important;
@@ -284,14 +284,14 @@ text {
 
 .navbar .navbar-brand:hover,
 .navbar .navbar-brand:focus {
-  color: #fff;
+  color: #fcf8e3;
 }
 
 
 /*custome style on navbar li */
 
 .navbar .navbar-nav>li>a {
-  color: #fff;
+  color: #fcf8e3;
   right: 30px !important;
   font-family: 'Dosis', sans-serif;
   font-weight: bold;
@@ -305,7 +305,7 @@ text {
 /* navbar li on hover */
 
 .navbar .navbar-nav>li>a:hover {
-  background-color: #eeeeee !important;
+  background-color: #fcf8e3 !important;
    border-radius: 20px;
   color: #333;
 }
@@ -313,7 +313,7 @@ text {
 .navbar .navbar-nav>.active>a,
 .navbar .navbar-nav>.active>a:hover,
 .navbar .navbar-nav>.active>a:focus{
-  background-color: #eeeeee !important;
+  background-color: #fcf8e3 !important;
    border-radius: 20px;
   color: #333 !important;
 }
@@ -335,6 +335,7 @@ text {
   padding-top: 10px;
   padding-bottom: 5px;
   background-color:#b0acac;
+  color: #fcf8e3;
 }
 
 textarea {
@@ -342,12 +343,46 @@ textarea {
   width: 600px;
 }
 
-#map {
-  margin-top: 100px;
-}
-
 #compare{
   margin-top: 100px;
   width: 100%;
   height: 500px;
+}
+
+
+/* sidebar menu css */
+.hamburger {
+    background: transparent;
+    border: none;
+    display: block;
+    height: 32px;
+    margin-left: 15px;
+    position: fixed;
+    top: 95px;
+}
+
+#sidebar-wrapper {
+  background-color: rgba(0, 0, 16, 0.7);
+    top:90px;
+    width: 0px !important;
+  max-height: calc(100% - 145px);
+  overflow-y: auto;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 300px !important;
+}
+
+#wrapper.toggled {
+    padding-left: 300px;
+}
+
+.overlay {
+ display: none !important;
+}
+
+li{
+  font-family: 'Abel', Arial, sans-serif;
+  font-size: 22px;
+  color: #fcf8e3;
 }
