--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ text {
 
 .navbar {
   min-height: 80px;
-  background: #000;
+  background:#b0acac;
   border-bottom: 0px solid #d9d9d9;
   box-shadow: 0 3px 10px rgba(0, 0, 0, .13), 0 3px 10px rgba(0, 0, 0, .16);
   -webkit-transition: all 0.6s ease-out;
@@ -272,7 +272,7 @@ text {
   color:#fcf8e3;
   position: absolute;
   left: 40px;
-  margin: 5px 5px!important;
+  margin: 5px!important;
   font-size: 28px !important;
   font-family: 'Dosis', Arial, sans-serif;
   padding: 20px 20px!important;
@@ -292,13 +292,14 @@ text {
 
 .navbar .navbar-nav>li>a {
   color: #fcf8e3;
+  color: #000;
   right: 30px !important;
   font-family: 'Dosis', sans-serif;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 1.42857;
   margin: 10px 10px;
-  padding: 20px 10px;
+  padding: 15px 10px;
 }
 
 
