--- a/css/style.css
+++ b/css/style.css
@@ -428,3 +428,18 @@ li{
   fill: #000 !important;
   font-size: 20px;
 }
+
+#view_selection{
+ top: 200px;
+  left: 200px;
+  font-size: 25px;
+}
+
+#view_selection .btn{
+  font-size: 20px;
+}
+.btn.active, .btn:active{
+ background-color:darkgrey;
+  box-shadow: 0 4px 8px rgba(0,0,0,.50),0 4px 8px rgba(0,0,0,.50);
+    transition: box-shadow .128s cubic-bezier(.4,0,.2,1);
+}
