--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@
     white-space: normal !important;
     word-wrap: break-word;
   }
-  .inner{
-     margin: 1px 1px;
-    }
-  
+  .inner {
+    margin: 1px 1px;
+  }
+
   .inner p {
     font-size: 15px !important;
   }
@@ -25,14 +25,14 @@
     height: 200px !important;
     width: 200px !important;
   }
-  
+
   #help {
     font-size: 20px;
     margin-top: 20px;
     margin-left: 2px;
     margin-right: 2px;
   }
-  
+
 }
 
 @media (min-width: 760px) and (max-width: 992px) {
@@ -59,11 +59,11 @@
     margin-left: 5px;
     margin-right: 5px;
   }
-  
-  .inner{
-     margin-left: 10%;
+
+  .inner {
+    margin-left: 10%;
     margin-right: 10%;
-    }
+  }
 }
 
 a {
@@ -147,7 +147,6 @@ container-fluid {
    -webkit-box-shadow: 0 3px 10px rgba(0,0,0,.23),0 3px 10px rgba(0,0,0,.16);
     -moz-box-shadow: 0 3px 10px rgba(0,0,0,.23),0 3px 10px rgba(0,0,0,.16);
     /*box-shadow: 0 1px 6px rgba(0,0,0,.12),0 1px 6px rgba(0,0,0,.12);*/
-
 
 /* box-shadow: 0 3px 10px rgba(0,0,0,.23),0 3px 10px rgba(0,0,0,.16);
     -webkit-box-sizing: border-box;
@@ -244,7 +243,7 @@ text {
 
 .navbar {
   min-height: 80px;
-  background:#b0acac;
+  background: #b0acac;
   border-bottom: 0px solid #d9d9d9;
   box-shadow: 0 3px 10px rgba(0, 0, 0, .13), 0 3px 10px rgba(0, 0, 0, .16);
   -webkit-transition: all 0.6s ease-out;
@@ -258,7 +257,7 @@ text {
 /*custome style on navbar brand */
 
 .navbar .navbar-brand {
-  color:#fcf8e3;
+  color: #fcf8e3;
   position: absolute;
   left: 40px;
   margin: 5px!important;
@@ -279,7 +278,7 @@ text {
 
 /*custome style on navbar li */
 
-.navbar .navbar-nav>li>a {
+.navbar .navbar-nav > li > a {
   color: #fcf8e3;
   color: #000;
   right: 30px !important;
@@ -294,15 +293,15 @@ text {
 
 /* navbar li on hover */
 
-.navbar .navbar-nav>li>a:hover {
+.navbar .navbar-nav > li > a:hover {
   background-color: #fcf8e3 !important;
-   border-radius: 40px;
+  border-radius: 40px;
   color: #333;
 }
 
-.navbar .navbar-nav>.active>a,
-.navbar .navbar-nav>.active>a:hover,
-.navbar .navbar-nav>.active>a:focus{
+.navbar .navbar-nav > .active > a,
+.navbar .navbar-nav > .active > a:hover,
+.navbar .navbar-nav > .active > a:focus {
   background-color: #fcf8e3 !important;
   border-radius: 40px;
   color: #333 !important;
@@ -324,7 +323,7 @@ text {
   width: 100%;
   padding-top: 10px;
   padding-bottom: 5px;
-  background-color:#b0acac;
+  background-color: #b0acac;
   color: #fcf8e3;
 }
 
@@ -333,7 +332,7 @@ textarea {
   width: 600px;
 }
 
-#compare{
+#compare {
   margin-top: 100px;
   width: 100%;
   height: 500px;
@@ -341,43 +340,45 @@ textarea {
 
 
 /* sidebar menu css */
+
 .hamburger {
-    background: transparent;
-    border: none;
-    display: block;
-    height: 32px;
-    margin-left: 15px;
-    position: fixed;
-    top: 95px;
+  background: transparent;
+  border: none;
+  display: block;
+  height: 32px;
+  margin-left: 15px;
+  position: fixed;
+  top: 95px;
 }
 
 #sidebar-wrapper {
   background-color: rgba(0, 0, 16, 0.7);
-    top:90px;
-    width: 0px !important;
+  top: 90px;
+  width: 0px !important;
   max-height: calc(100% - 145px);
   overflow-y: auto;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 300px !important;
+  width: 300px !important;
 }
 
 #wrapper.toggled {
-    padding-left: 300px;
+  padding-left: 300px;
 }
 
 .overlay {
- display: none !important;
+  display: none !important;
 }
 
-li{
+li {
   font-family: 'Abel', Arial, sans-serif;
   font-size: 22px;
   color: #fcf8e3;
 }
 
 /*Slider css*/
+
 .ticks {
   font: 20px sans-serif;
 }
@@ -408,26 +409,28 @@ li{
   cursor: hand;
 }
 
-.barlegend text{
+.barlegend text {
   fill: #000 !important;
   font-size: 20px;
 }
 
-.axis text{
+.axis text {
   fill: #000 !important;
   font-size: 20px;
 }
 
-#view_selection{
- top: 200px;
+#view_selection {
+  top: 50px;
   left: 200px;
   font-size: 25px;
+  margin-bottom: 100px;
 }
 
-#view_selection .btn{
+#view_selection .btn {
   font-size: 20px;
-   color: #000;
+  color: #000;
 }
+
 /*
 #view_selection .btn.active{
   color: #000;
@@ -435,3 +438,8 @@ li{
     transition: box-shadow .128s cubic-bezier(.4,0,.2,1);
 }
 */
+
+#reftree {
+  height: 850px;
+  overflow-y: auto;
+}
