--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ container-fluid {
   border-bottom: 2px solid #d9d9d9;
   font-weight: bold;
   text-align: center;
-  padding: 10px 10px 10px;
+  padding: 10px 10px;
 }
 
 .chart-wrapper .chart-area {
@@ -132,6 +132,13 @@ container-fluid {
   position: relative;
 }
 
+.chart-wrapper .chart-footer {
+  text-transform: uppercase;
+  border-top: 2px solid #d9d9d9;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px 5px;
+}
 
 /*
 .card {
