--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,12 @@ div.tooltip {
   pointer-events: none;
 }
 
+.dropdown-menu li {
+  font-size: 15px;
+  line-height: 3px;
+  position: relative;
+}
+
 h4.title {
   text-align: center;
 }
@@ -248,6 +254,10 @@ text {
   font-size: 13px;
   font-family: 'Abel', Arial, sans-serif;
   font-weight: bold;
+}
+
+#mode-buttons {
+  margin-left: 20px;
 }
 
 .navbar {
@@ -361,7 +371,8 @@ textarea {
 }
 
 #sidebar-wrapper {
-  background-color: rgba(0, 0, 16, 0.7);
+  background-color: #c6c3c3;
+  color: black;
   top: 90px;
   width: 0px !important;
   max-height: calc(100% - 145px);
@@ -374,6 +385,13 @@ textarea {
 
 #wrapper.toggled {
   padding-left: 300px;
+}
+
+#wrapper span {
+  font-size: 16px;
+  font-weight: bold;
+  font-family: Lato, "Helvetica Neue", Helvetica, sans-serif;
+  color: rgb(0, 0, 0);
 }
 
 .overlay {
