--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@ select {
   border-color: #d9d9d9 #ccc #b3b3b3;
   border-radius: 4px;
   border: 1px solid #ccc;
+  border: 3px solid #a3d8d6;
   color: #333;
   cursor: default;
   display: table;
@@ -275,7 +276,6 @@ select {
   color: #333;
   height: 200px;
   overflow: scroll;
-  width: 100% !important;
 }
 
 .awesomplete ul > li {
